# internal/infrastructure/dtos/requests/vehicle.go
@@ -6,15 +6,15 @@ import (
 )
 
 type CreateVehicle struct {
-	PlateNo         string    `json:"plate_no"`
-	VIN             string    `json:"vin"`
-	CategoryID      uuid.UUID `json:"category_id"`
-	Model           string    `json:"model"`
-	Brand           string    `json:"brand"`
-	Color           string    `json:"color"`
-	ManufactureYear int       `json:"manufacture_year"`
-	MaxSpeed        int       `json:"max_speed"`
-	FuelType        string    `json:"fuel_type"`
+	PlateNo         string    `json:"plate_no" example:"B 1234 ABC"`
+	VIN             string    `json:"vin" example:"1HGCM82633A123456"`
+	CategoryID      uuid.UUID `json:"category_id" example:"3fa85f64-5717-4562-b3fc-2c963f66afa6"`
+	Model           string    `json:"model" example:"Avanza"`
+	Brand           string    `json:"brand" example:"Toyota"`
+	Color           string    `json:"color" example:"Hitam"`
+	ManufactureYear int       `json:"manufacture_year" example:"2020"`
+	MaxSpeed        int       `json:"max_speed" example:"180"`
+	FuelType        string    `json:"fuel_type" example:"Bensin"`
 
 	DeviceGPS RegistrationGPS `json:"device_gps,omitempty"`
 }
